@@ -1,3 +1,7 @@
+Sat Sep  4 20:25:46 CEST 1999 Daniel Veillard <Daniel.Veillard@w3.org>
+
+	* doc/xml.html : updated the documentation
+
 Fri Sep  3 00:01:08 CEST 1999 Daniel Veillard <Daniel.Veillard@w3.org>
 
 	* xmlmemory.[ch] Makefile.am  :added a memory wrapper to chase
